--- a/src/main/resources/templates/fragments/headinc.html
+++ b/src/main/resources/templates/fragments/headinc.html
@@ -22,6 +22,13 @@
             th:src="@{/webjars/tether/1.4.0/js/tether.min.js}"></script>
     <script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.0.0-alpha.6-1/js/bootstrap.min.js"
             th:src="@{/webjars/bootstrap/4.0.0-alpha.6-1/js/bootstrap.min.js}"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggle="popover"]').popover()
+        });
+    </script>
 </head>
 <body>
 
