--- a/src/main/resources/templates/notes.html
+++ b/src/main/resources/templates/notes.html
@@ -14,11 +14,11 @@
                 <div class="col-lg-5 col-md-10" th:each="note : ${noteChunks}">
                     <div class="card" th:classappend="'card-outline-'+${lesson.subject.colour.name}">
                         <div class="card-block text-white" th:classappend="'card-'+${lesson.subject.colour.name}">
-                            <span class="h4" th:text="'Notatka #'+${note.id}"></span>
+                            <span class="h4" th:text="'Notatka - '+${note.date}"></span>
                             <span class="float-right">
-                            <a href="#" th:href="${'/note/edit/'+note.id}"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
+                            <a href="#" th:href="${'/note/edit/'+note.id}" data-toggle="tooltip" data-placement="top" title="Edytuj"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
                             <i>&nbsp;</i>
-                            <a href="#" th:href="${'/note/delete/'+note.id}"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a>
+                            <a href="#" th:href="${'/note/delete/'+note.id}" data-toggle="tooltip" data-placement="top" title="Usuń"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a>
                         </span>
                         </div>
                         <ul class="list-group list-group-flush" th:classappend="'text-'+${lesson.subject.colour.name}">
@@ -34,7 +34,7 @@
             </button>
         </main>
 
-        <!--Modal (dodawanie przedmiotu)-->
+        <!--Modal (dodawanie notatki)-->
         <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" th:attr="id='noteModal'">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -47,16 +47,8 @@
                     <form th:object="${note}" th:action="@{/note}" method="post">
                         <div class="modal-body">
                             <input type="hidden" th:field="*{id}"/>
-
-                            <!--<div class="form-group">-->
-                                <!--<label th:attr="for='lesson-select'+${lesson.id}">Zajęcia</label>-->
-                                <!--<select class="form-control" th:attr="id='lesson-select'+${lesson.id}" th:field="*{lesson}">-->
-                                    <!--<option th:each="lesson : ${lessons}"-->
-                                            <!--th:value="${lesson.id}"-->
-                                            <!--th:text="${lesson.subject.name}+' - '+${lesson.lessonType.nazwa}">Wireframe</option>-->
-                                <!--</select>-->
-                            <!--</div>-->
                             <input type="hidden" th:value="${lesson.id}" th:attr="name='lesson'"/>
+                            <input type="hidden" th:value="${today_date}" th:attr="name='date'"/>
                             <div class="row">
                                 <div class="col-12">
                                     <label th:attr="for='content_note'">Treść</label>
