Added evaluations to calendar view

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -36,7 +36,9 @@
                     }).length)>0;
                     /*]]>*/
                 },
-                events:'/lessonsJSON'
+                eventSources:[
+                    '/lessonsJSON',
+                    'eventsJSON']
             })
         });
     </script>
