--- a/src/main/resources/templates/evalform.html
+++ b/src/main/resources/templates/evalform.html
@@ -52,7 +52,7 @@
 
                             <div class="form-group row justify-content-between">
                                 <div class="col-12 ">
-                                    <a th:href="@{/subjects}" href="#" class="btn btn-danger">Anuluj</a>
+                                    <a th:href="@{/evals}" href="#" class="btn btn-danger">Anuluj</a>
                                     <button type="submit" class="btn btn-primary">Zapisz</button>
                                 </div>
                             </div>
