--- a/src/main/resources/templates/homeworkform.html
+++ b/src/main/resources/templates/homeworkform.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group row justify-content-between">
                                 <div class="col-12 ">
-                                    <a th:href="${'/notes/subject/'+note.lesson.id}" href="#" class="btn btn-danger">Anuluj</a>
+                                    <a th:href="${'/'}" href="#" class="btn btn-danger">Anuluj</a>
                                     <button type="submit" class="btn btn-primary">Zapisz</button>
                                 </div>
                             </div>
