--- a/src/main/resources/templates/lessonform.html
+++ b/src/main/resources/templates/lessonform.html
@@ -62,7 +62,7 @@
                             </div>
                             <div class="form-group row justify-content-between">
                                 <div class="col-sm-10 ">
-                                    <a th:href="@{/evals}" href="#" class="btn btn-danger">Anuluj</a>
+                                    <a th:href="@{/subjects}" href="#" class="btn btn-danger">Anuluj</a>
                                     <button type="submit" class="btn btn-primary">Zapisz</button>
                                 </div>
                             </div>
