--- a/src/main/resources/templates/roomform.html
+++ b/src/main/resources/templates/roomform.html
@@ -27,7 +27,7 @@
                             </div>
                             <div class="form-group row justify-content-between">
                                 <div class="col-12 ">
-                                    <a th:href="@{/subjects}" href="#" class="btn btn-danger">Anuluj</a>
+                                    <a th:href="@{/rooms}" href="#" class="btn btn-danger">Anuluj</a>
                                     <button type="submit" class="btn btn-primary">Zapisz</button>
                                 </div>
                             </div>
