Teacher form added. Basic functionality finished

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -52,7 +52,7 @@
 <div class="container-fluid">
     <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
-            <h1><i class="fa fa-dashboard fa-fw"></i>&nbsp;Widok Główny</h1>
+            <h1><i class="fa fa-calendar fa-fw"></i>&nbsp;Kalendarz</h1>
             <div class="row">
 
             </div>
