--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" th:href="@{/rooms}" th:classappend="|${#httpServletRequest.requestURI=='/rooms'? 'active': ''} ${#httpServletRequest.requestURI!='/rooms'? 'text-muted' : ''}|"><i class="fa fa-map-marker fa-fw"></i> Sale</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/teachers}" th:classappend="|${#httpServletRequest.requestURI=='/teachers'? 'active': ''} ${#httpServletRequest.requestURI!='/teachers'? 'text-muted' : ''}|"><i class="fa fa-address-card fa-fw"></i> Nauczyciele</a>
+            </li>
         </ul>
     </nav>
 </div>
